# IX-GCR-SPE

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
BOM/: IX_GCR_SPE_Full_BillOfMaterials.md
configs/: bom_baseline_plus_cleanup_shadow_vault.json  bom_baseline_shadow_vault.json  bom_extreme_shadow_vault.json
docs/analysis/: MATERIALS_TRADE_STUDY_FRAMEWORK.md  MISSION_ASSUMPTIONS.md  PATENT_LANDSCAPE.md  PUBLIC_REPO_LANDSCAPE.md  REQUIREMENTS_AND_ACCEPTANCE_CRITERIA.md  RISK_REGISTER.md  SOURCE_TRACEABILITY_MAP.md  THREAT_MODEL.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  LAYER_STACK_BASELINE.md  SHADOW_VAULT_CONCEPT.md  SHIELD_HEALTH_MONITORING.md
docs/controls/: ACTIVE_AUGMENTATION_SAFETY.md  SUPERVISORY_STATE_MACHINE.md
docs/governance/: CLAIM_BOUNDARIES.md  PROJECT_CHARTER.md
docs/verification/: EVIDENCE_PACKAGE_TEMPLATE.md  TEST_MATRIX.md  TRANSPORT_MODEL_PLAN.md  VERIFICATION_AND_MODELING_ROADMAP.md
results/: README.md
schemas/: ix_gcr_spe_config.schema.json
src/analysis/: README.md  areal_density_budget.py  validate_config.py  zone_report.py
tests/: test_analysis_helpers.py  test_validate_config.py
